Fix listado de link en cap11.2

--- a/libro/html/index.html
+++ b/libro/html/index.html
@@ -4873,31 +4873,41 @@
    	>&lt;head /&gt;</code
    	> de la plantilla.</p
          ><p
-         >Más información sobre: * <code
-   	>JDocument</code
-   	>: <a href="http://docs.joomla.org/JDocument"
-   	><code class="url"
-   	  >http://docs.joomla.org/JDocument</code
-   	  ></a
-   	> * <code
-   	>getDocument</code
-   	>: <a href="http://docs.joomla.org/JFactory::getDocument/"
-   	><code class="url"
-   	  >http://docs.joomla.org/JFactory::getDocument/</code
-   	  ></a
-   	> * <code
-   	>addScriptDeclaration</code
-   	>: <a href="http://docs.joomla.org/JDocument/addScriptDeclaration"
-   	><code class="url"
-   	  >http://docs.joomla.org/JDocument/addScriptDeclaration</code
-   	  ></a
-   	> * <code
-   	>addStyleDeclaration</code
-   	>: <a href="http://docs.joomla.org/JDocument/addStyleDeclaration"
-   	><code class="url"
-   	  >http://docs.joomla.org/JDocument/addStyleDeclaration</code
-   	  ></a
-   	></p
+         >Más información sobre:</p
+         ><ul
+         ><li
+   	><code
+   	  >JDocument</code
+   	  >: <a href="http://docs.joomla.org/JDocument"
+   	  ><code class="url"
+   	    >http://docs.joomla.org/JDocument</code
+   	    ></a
+   	  ></li
+   	><li
+   	><code
+   	  >getDocument</code
+   	  >: <a href="http://docs.joomla.org/JFactory::getDocument/"
+   	  ><code class="url"
+   	    >http://docs.joomla.org/JFactory::getDocument/</code
+   	    ></a
+   	  ></li
+   	><li
+   	><code
+   	  >addScriptDeclaration</code
+   	  >: <a href="http://docs.joomla.org/JDocument/addScriptDeclaration"
+   	  ><code class="url"
+   	    >http://docs.joomla.org/JDocument/addScriptDeclaration</code
+   	    ></a
+   	  ></li
+   	><li
+   	><code
+   	  >addStyleDeclaration</code
+   	  >: <a href="http://docs.joomla.org/JDocument/addStyleDeclaration"
+   	  ><code class="url"
+   	    >http://docs.joomla.org/JDocument/addStyleDeclaration</code
+   	    ></a
+   	  ></li
+   	></ul
          ><p
          >Otra manera de realizar el trabajo es utilizando las etiquetas <code
    	>&lt;style type=&quot;text/css&quot; /&gt;</code
