--- a/libro/html/index.html
+++ b/libro/html/index.html
@@ -9,11 +9,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 	<meta name="robots" content="index, follow"/>
 	<title>Desarrollo de plantillas para Joomla! 1.6</title>
-	<link rel="stylesheet" href="incluir/css/blueprint/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="incluir/css/blueprint/screen.css" type="text/css" media="screen, projection, print">
 	<!--[if lt IE 8]><link rel="stylesheet" href="incluir/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
-	<link  href="http://fonts.googleapis.com/css?family=Rock+Salt:regular?text=Biblioteca|Shanti|Reenie+Beanie&amp;amp;subset=latin" rel="stylesheet" type="text/css" >
-	<link href='incluir/css/estilos.css' media='screen' rel='stylesheet' type='text/css'/>
-	<link href='incluir/css/estilos-imprimir.css' media='print' rel='stylesheet' type='text/css'/>
+	<link href="http://fonts.googleapis.com/css?family=Rock+Salt:regular?text=Biblioteca|Shanti|Reenie+Beanie&amp;amp;subset=latin" rel="stylesheet" type="text/css" >
+	<link rel="stylesheet" href="incluir/css/estilos.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="incluir/css/estilos-imprimir.css" type="text/css" media='print' />
 	</head>
 <body>
 
@@ -55,7 +55,9 @@
 				<div id="titulo">
 					<h1>Desarrollo de plantillas para Joomla! 1.6</h1>
 				</div>
-
+				
+				<div id="imprimir"></div>
+				
 									<h2 id="indice">Índice</h2>
 					<div id="TOC">
      <ul>
