Fix listado en cap11

--- a/libro/html/index.html
+++ b/libro/html/index.html
@@ -2812,9 +2812,10 @@
     &lt;/dl&gt;
     </code></pre>
     <p>Suponiendo el caso que se necesita que los datos de estadísticas del sitio, en lugar de mostrarse dentro de etiquetas <code>&lt;dl /&gt;</code>, <code>&lt;dt /&gt;</code> y <code>&lt;dd /&gt;</code>, se muestren dentro de una lista desordenada (<code>&lt;ul /&gt;</code>, <code>&lt;li /&gt;</code>). Para realizarlo, utilizando la plantilla creada, se debe:</p>
-    <pre><code>* En la carpeta `html` de la plantilla, crear una carpeta llamada `mod_stats`;
-    * Dentro de la carpeta creada, copiar los archivos `default.php` y `index.html` que estan en la carpeta `tmpl`;
-    </code></pre>
+    <ul>
+    <li>En la carpeta <code>html</code> de la plantilla, crear una carpeta llamada <code>mod_stats</code>;</li>
+    <li>Dentro de la carpeta creada, copiar los archivos <code>default.php</code> y <code>index.html</code> que estan en la carpeta <code>tmpl</code>;</li>
+    </ul>
     <p>De modo que la carpeta <code>html</code> posea la siguiente estructura de archivos:</p>
     <div class="figure">
     <img src="incluir/figuras/image20.png" /><p class="caption"></p>
